--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         
         <h4 class="mt-4">Order Summary:</h4>
         <ul class="list-unstyled">
-            <li><strong>Website Name:</strong> Awesome Website</li>
-            <li><strong>Price:</strong> <i class="fa-solid fa-indian-rupee-sign"></i> 200</li>
-            <li><strong>Order Reference:</strong> ORD-12345</li>
+            <!-- <li><strong>Website Name:</strong> Awesome Website</li> -->
+            <li><strong>Price:</strong> <i class="fa-solid fa-indian-rupee-sign"></i></li>
+            <li><strong>Order Reference:</strong> ORD-...</li>
         </ul>
         
         <a href="https://gulzaralice1.github.io/MyDigitalSpace/" class="btn btn-primary mt-4">Return to Homepage</a>
